Lang/Tests/From Book/chapter_5/invalid_semantics/use_then_redefine.g
int main(void) {
    int a = 0;
    int a = 1;
    return a;
}